fix broken layout on first lap

--- a/css/overlay.less
+++ b/css/overlay.less
@@ -261,6 +261,10 @@ html, body {
 				margin: 5px 20px;
 				background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0.75) 50%,rgba(255,255,255,0) 100%);
 			}
+
+			.gap-time.ng-hide + .divider {
+				margin: 5px 20px 5px 150px;
+			}
 		}
 	}
 }
